# guess-number

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  code_generator.h  guess_number.cpp  guess_number.h  random_code_generator.h
test/: CMakeLists.txt  Test.cpp
